--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     font-family: fantasy;
     color: var(--main);
     overflow: hidden;
+    font-weight: 500;
 }
 html,body{
     height: 100%;
